# TinkerBell

./: .gitignore  README.md  ai_enhancements.md  ai_enhancements_implementation.md  ai_fixes.md  ai_refactor.md  ai_refactor_implementation.md  ai_v2_phase5_implementation.md  ai_v2_phase_0_plan.md  ai_v2_phase_2_plan.md  ai_v2_phase_3_plan.md  ai_v2_phase_4_plan.md  ai_v2_plan.md  change_control.md  change_control_implementation.md  cleanup.md  cleanup_plan.md  cleanup_v2.md  cleanup_v2_implementation.md  controller_cleanup.md  debug_script.py  editing_v2_plan.md  embeddings_improvements.md  embeddings_improvements_implementation.md  example.json  fixing_ai.md  fixing_ai_v2.md  fixing_ai_v2_implementation.md  implement_fixing_ai.md  implement_remove_selection_logic.md  improvement_ideas.md  module_plan.md  plan.md  pyproject.toml  remove_selection_logic.md  tabs_plan.md  testing.md  testing_improvements.md
benchmarks/: measure_diff_latency.py  measure_subagent_latency.py  phase0_token_counts.md  subagent_latency.md
docs/: ai_v2.md  ai_v2_release_notes.md  orchestration_cleanup_implementation.md  orchestration_cleanup_plan.md  ui_architecture_redesign.md  ui_architecture_redesign_implementation.md
test_data/: A Complete Dictionary of Synonyms and Antonyms by Samuel Fallows.txt  The Night of Temptation.md
tests/: conftest.py  helpers.py  test_agent.py  test_ai_client.py  test_ai_controller.py  test_ai_tools.py  test_ai_turn_coordinator.py  test_ai_turn_manager.py  test_analysis_adapter.py  test_analysis_agent.py  test_app.py  test_bridge.py  test_bridge_router.py  (+93 more)
(+253 files in other folders)
