[project]
name = "tinkerbell"
version = "0.1.0"
description = "Agent-aware desktop text editor built with PySide6 and LangChain/ LangGraph."
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
  "cryptography >=42.0,<43.0",
  "faiss-cpu >=1.7, <2.0",
  "jinja2 >=3.1, <4.0",
  "jsonschema >=4.21, <5.0",
  "langchain >=0.3, <0.4",
  "langgraph >=0.2.0, <0.3.0",
  "markdown-it-py >=3.0, <4.0",
  "openai >=1.3, <2.0",
  "pypdf >=4.0, <5.0",
  "pydantic >=2.6, <3.0",
  "pyside6 >=6.7, <7.0",
  "PyQt6-QScintilla>=2.14, <3.0",
  "qasync >=0.24.0, <0.25.0",
  "ruamel.yaml >=0.18, <0.19",
  "tenacity >=8.2, <9.0"
]

[project.scripts]
tinkerbell = "tinkerbell.app:main"

[project.optional-dependencies]
ai_tokenizers = [
  "tiktoken>=0.12,<0.13"
]

[dependency-groups]
dev = [
  "black>=24.3,<25.0",
  "mypy>=1.9,<2.0",
  "pytest>=8.2,<9.0",
  "pytest-asyncio>=0.23,<0.24",
  "pytest-qt>=4.4,<5.0",
  "ruff>=0.5,<0.6"
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tinkerbell"]
